[package]
name = "cargo-leet"
version = "0.3.0-dev"
authors = ["Members of Rust Practice Discord Server"]
categories = ["command-line-utilities"]
edition = "2021"
keywords = ["leetcode", "leetcode-cli", "cli"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-practice/cargo-leet"
description = "Utility program to help with working on leetcode locally"

[dependencies]
anyhow = { version = "1.0.97", optional = true }
cargo-generate = { version = "0.23.0", optional = true }
clap = { version = "4.5.34", features = ["derive", "cargo"], optional = true }
convert_case = { version = "0.8.0", optional = true }
env_logger = { version = "0.11.7", optional = true }
itertools = { version = "0.14.0", optional = true }
log = { version = "0.4.27", optional = true }
regex = { version = "1.11.1", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
strum = { version = "0.27.1", features = ["derive"], optional = true }
toml = { version = "0.8.20", optional = true }
ureq = { version = "3.0.10", features = ["json"], optional = true }

[[bin]]
name = "cargo-leet"
path = "src/main.rs"
required-features = ["tool"]

[features]
default = ["leet_env"]
# Add support for leetcode's environment
leet_env = []
# Items used when running as a binary
tool = [
    "anyhow",
    "clap",
    "convert_case",
    "env_logger",
    "log",
    "regex",
    "serde_json",
    "serde",
    "strum",
    "ureq",
    "toml",
    "itertools",
    "cargo-generate",
]

[dev-dependencies]
insta = { version = "1.42.2", default-features = false }
rand = "0.9.0"
rstest = "0.25.0"
